- deletes unnecessary daos and services in servlets - deletes unnecesary lines of code, unused imports, etc