@@ -6,7 +6,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
-
 import com.novawallet.model.dao.*;
 import com.novawallet.model.dao.impl.*;
 import com.novawallet.model.dto.TransactionDTO;
@@ -16,40 +15,30 @@ import com.novawallet.model.entity.Transaction;
 import com.novawallet.model.entity.User;
 import com.novawallet.model.service.*;
 import com.novawallet.model.service.impl.*;
-import com.novawallet.shared.Bcrypt;
-import jakarta.servlet.RequestDispatcher;
 import jakarta.servlet.ServletConfig;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.*;
 import jakarta.servlet.annotation.*;
 
 @WebServlet(name = "transactions", value = "/transactions")
-public class Transactions extends HttpServlet {
+public class TransactionsController extends HttpServlet {
 
     private UserService userService;
-    private UserDAO userDAO;
     private AccountService accountService;
-    private AccountDAO accountDAO;
     private CurrencyService currencyService;
-    private CurrencyDAO currencyDAO;
     private TransactionService transactionService;
-    private TransactionDAO transactionDAO;
-    private ContactService contactService;
-    private ContactDAO contactDAO;
 
     @Override
     public void init(ServletConfig config) throws ServletException {
         super.init(config);
-        userDAO= new UserDAOImpl();
+        UserDAO userDAO = new UserDAOImpl();
+        AccountDAO accountDAO = new AccountDAOImpl();
+        CurrencyDAO currencyDAO = new CurrencyDAOImpl();
+        TransactionDAO transactionDAO = new TransactionDAOImpl();
         userService= new UserServiceImpl(userDAO);
-        accountDAO = new AccountDAOImpl();
         accountService = new AccountServiceImpl(accountDAO);
-        currencyDAO = new CurrencyDAOImpl();
         currencyService = new CurrencyServiceImpl(currencyDAO);
-        transactionDAO = new TransactionDAOImpl();
         transactionService = new TransactionServiceImpl(transactionDAO);
-        contactDAO = new ContactDAOImpl();
-        contactService = new ContactServiceImpl(contactDAO);
     }
 
     public void doGet(HttpServletRequest request, HttpServletResponse response) throws IOException {
@@ -59,10 +48,10 @@ public class Transactions extends HttpServlet {
             response.sendRedirect("index.jsp");
         } else {
             User user = userService.getUserByEmail(String.valueOf(mail));
-            Account account = accountService.getAccountsByOwnerId(user.getId()).get(0);
+            Account account = accountService.getAccountsByOwnerId(user.getId()).getFirst();
             Currency currency = currencyService.getCurrencyById(account.getCurrencyId());
             List<Transaction> transactions = transactionService.getTransactionsByUserId(user.getId());
-            List<TransactionDTO> transactionsDTO = new ArrayList<TransactionDTO>();
+            List<TransactionDTO> transactionsDTO = new ArrayList<>();
 
             for (Transaction transaction : transactions) {
                 TransactionDTO dto = new TransactionDTO(transaction, user.getId());
